@@ -62,6 +62,13 @@ Casting rules in Numexpr follow closely those of NumPy.  However, for
 implementation reasons, there are some known exceptions to this rule,
 namely:
 
+    * When an array with type `int8`, `uint8`, `int16` or `uint16` is
+      used inside Numexpr, it is internally upcasted to an `int` (or
+      `int32` in NumPy notation).
+
+    * When an array with type `uint32` is used inside Numexpr, it is
+      internally upcasted to a `long` (or `int64` in NumPy notation).
+
     * A floating point function (e.g. `sin`) acting on `int8` or
       `int16` types returns a `float64` type, instead of the `float32`
       that is returned by NumPy functions.  This is mainly due to the
