@@ -5,8 +5,14 @@
 Changes from 1.3 to 1.3.1
 =========================
 
-- Function `abs` for computing the absolute value added.  Thanks to
-  Pauli Virtanen for the patch.
+- Due to an oversight, ``uint32`` types were not properly supported.
+  That has been solved.  Fixes #19.
+
+- Function `abs` for computing the absolute value added.  However, it
+  does not strictly follow NumPy conventions.  See ``README.txt`` or
+  website docs for more info on this.  Thanks to Pauli Virtanen for
+  the patch.  Fixes #20.
+
 
 Changes from 1.2 to 1.3
 =======================
